feat: Added support to match address directly using country name

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-18T17:58:24.369238900Z",
-     "start_time": "2023-11-18T17:58:23.679578200Z"
+     "end_time": "2023-11-18T18:22:20.538000900Z",
+     "start_time": "2023-11-18T18:22:19.872749400Z"
     }
    },
    "outputs": [],
@@ -20,25 +20,49 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "countryMatcher = CountryMatcher(\"dataset/city_to_country_mapping.json\", \"dataset/city_to_country_mapping.json\")"
+    "countryMatcher = CountryMatcher(\"dataset/city_to_country_mapping.json\", \"dataset/country_to_code_mapping.json\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T17:58:24.462238500Z",
-     "start_time": "2023-11-18T17:58:24.372238600Z"
+     "end_time": "2023-11-18T18:22:21.201105100Z",
+     "start_time": "2023-11-18T18:22:21.137535Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1924571039420048526"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countryMatcher.find_country(\"stationsstraat 11 9690, kluisbergen, , Belgium\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-18T18:22:21.752990400Z",
+     "start_time": "2023-11-18T18:22:21.734937400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['be', 'fr', 'fr']\n"
+      "[-1924571039420048526, -639896192934281546, -639896192934281546]\n"
      ]
     }
    ],
@@ -48,8 +72,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T18:02:16.516959900Z",
-     "start_time": "2023-11-18T18:02:16.337960700Z"
+     "end_time": "2023-11-18T18:22:23.194843700Z",
+     "start_time": "2023-11-18T18:22:22.974833700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1924571039420048526"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countryMatcher.find_country(\"stationsstraat 11 9690, kluisbesrgen\", confidence_threshold=50)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-18T18:22:25.310449700Z",
+     "start_time": "2023-11-18T18:22:25.167621100Z"
     }
    }
   },
