feat: Added threading to the code to make it scalable

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-18T18:22:20.538000900Z",
-     "start_time": "2023-11-18T18:22:19.872749400Z"
+     "end_time": "2023-11-18T18:31:48.786961200Z",
+     "start_time": "2023-11-18T18:31:48.123412900Z"
     }
    },
    "outputs": [],
@@ -25,55 +25,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T18:22:21.201105100Z",
-     "start_time": "2023-11-18T18:22:21.137535Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "-1924571039420048526"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countryMatcher.find_country(\"stationsstraat 11 9690, kluisbergen, , Belgium\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-18T18:22:21.752990400Z",
-     "start_time": "2023-11-18T18:22:21.734937400Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1924571039420048526, -639896192934281546, -639896192934281546]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(countryMatcher.find_country([\"stationsstraat 11 9690, kluisbergen\", \"rue du vieux logis chavagnes-les-redoux\", \"Rue De Beaurivage Bois-De-Céné\"]))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-18T18:22:23.194843700Z",
-     "start_time": "2023-11-18T18:22:22.974833700Z"
+     "end_time": "2023-11-18T18:31:48.850961800Z",
+     "start_time": "2023-11-18T18:31:48.788961800Z"
     }
    }
   },
@@ -83,7 +36,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "-1924571039420048526"
+      "text/plain": "'d5a79707c0bb522e0de814a42fc80baa78e3bec1267720418c8c4c019d53a1fa'"
      },
      "execution_count": 5,
      "metadata": {},
@@ -91,13 +44,85 @@
     }
    ],
    "source": [
-    "countryMatcher.find_country(\"stationsstraat 11 9690, kluisbesrgen\", confidence_threshold=50)"
+    "countryMatcher.find_country_hash(\"stationsstraat 11 9690, kluisbergen, , Belgium\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T18:22:25.310449700Z",
-     "start_time": "2023-11-18T18:22:25.167621100Z"
+     "end_time": "2023-11-18T18:31:51.266377Z",
+     "start_time": "2023-11-18T18:31:51.256381400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d5a79707c0bb522e0de814a42fc80baa78e3bec1267720418c8c4c019d53a1fa', '501c26b2571a1f7fd72df8c21593874fc874c97145717470596895d1c22203f7', '501c26b2571a1f7fd72df8c21593874fc874c97145717470596895d1c22203f7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(countryMatcher.find_country_hash([\"stationsstraat 11 9690, kluisbergen\", \"rue du vieux logis chavagnes-les-redoux\", \"Rue De Beaurivage Bois-De-Céné\"]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-18T18:31:52.078640800Z",
+     "start_time": "2023-11-18T18:31:51.855650500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'cd8d844d2c3dedc1f6d5c56924a9f743bba1fc43278772da035935446c2db0f5'"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countryMatcher.find_country_hash(\"stationsstraat 11 9690, kluisbesrgen\", confidence_threshold=100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-18T18:33:24.115208700Z",
+     "start_time": "2023-11-18T18:33:24.020013400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'cd8d844d2c3dedc1f6d5c56924a9f743bba1fc43278772da035935446c2db0f5'"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hashlib\n",
+    "hashlib.sha256(\"No match\".encode('utf-8')).hexdigest()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-18T18:33:22.028588200Z",
+     "start_time": "2023-11-18T18:33:22.006695800Z"
     }
    }
   },
